# shortee

./: .gitignore  Makefile  README.md  lambda_function.py  pyproject.toml
src/: lambda_function.py
src/adapter/dynamodb_short_url_repository/: short_url_attribute.py
src/domain/: short_url.py  short_url_repository.py
src/use_case/: create_short_url.py  perform_health_check.py
terraform/: Makefile  README.md  api_public.tf  cloudwatch.tf  data.tf  dynamodb.tf  lambda_iam.tf  lambda_proxy.tf  locals.tf  modules.tf  provider.tf  security_group.tf  terraform.tf
terraform/modules/api_route_proxy_rpc/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: execute_api_vpc_endpoint.tf  flow_logs.tf  nat.tf  output.tf  variables.tf  vpc.tf  vpc_endpoints.tf
tests/: conftest.py  test_lambda_function.py
tests/use_cases/: test_perform_health_check.py
