[tool.poetry]
name = "shortee"
version = "0.1.0"
description = ""
authors = ["neil millard <3050649+neilmillard@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.58"
aws-lambda-typing = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
httpretty = "^1.1.4"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
reorder-python-imports = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
